@@ -262,34 +262,36 @@
              (setq stream destination))
             (t (error (TEXT "The destination argument ~S is invalid (not NIL or T or a stream or a string).")
                       destination)))
-      (unless (stringp control-string)
-        (error (TEXT "~S: The control-string must be a string, not ~S")
-               'format control-string))
-      (let ((i 0) (n (length control-string)))
-        (tagbody
-          next
-            (when (< i n)
-              (when (eq (char control-string i) #\~)
-                (when (< (1+ i) n)
-                  (let ((c (char control-string (1+ i))))
-                    (cond ((eq c #\S)
-                           (prin1 (car arguments) destination)
-                           (setq arguments (cdr arguments))
-                           (setq i (+ i 2))
-                           (go next))
-                          ((eq c #\A)
-                           (princ (car arguments) destination)
-                           (setq arguments (cdr arguments))
-                           (setq i (+ i 2))
-                           (go next))
-                          ((eq c #\C)
-                           (write-char (car arguments) destination)
-                           (setq arguments (cdr arguments))
-                           (setq i (+ i 2))
-                           (go next))))))
-              (write-char (char control-string i) destination)
-              (setq i (+ i 1))
-              (go next))))
+      (cond ((stringp control-string)
+             (let ((i 0) (n (length control-string)))
+               (tagbody
+                 next
+                   (when (< i n)
+                     (when (eq (char control-string i) #\~)
+                       (when (< (1+ i) n)
+                         (let ((c (char control-string (1+ i))))
+                           (cond ((eq c #\S)
+                                  (prin1 (car arguments) stream)
+                                  (setq arguments (cdr arguments))
+                                  (setq i (+ i 2))
+                                  (go next))
+                                 ((eq c #\A)
+                                  (princ (car arguments) stream)
+                                  (setq arguments (cdr arguments))
+                                  (setq i (+ i 2))
+                                  (go next))
+                                 ((eq c #\C)
+                                  (write-char (car arguments) stream)
+                                  (setq arguments (cdr arguments))
+                                  (setq i (+ i 2))
+                                  (go next))))))
+                     (write-char (char control-string i) stream)
+                     (setq i (+ i 1))
+                     (go next)))))
+            ((functionp control-string)
+             (apply control-string stream arguments))
+            (t (error (TEXT "~S: The control-string must be a string, not ~S")
+                      'format control-string)))
       (if (null destination)
         (get-output-stream-string stream)
         nil))))
